--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -152,7 +152,7 @@
     booktitle    = {2019 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
     year         = 2019,
     pages        = {4918-4927},
-    url          = {http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhu_Binary_Ensemble_Neural_Network_More_Bits_per_Network_or_More_CVPR_2019_paper.pdf}
+    url          = {http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhu_Binary_Ensemble_Neural_Network_More_Bits_per_Network_or_More_CVPR_2019_paper.pdf},
     doi          = {10.1109/CVPR.2019.00506},
     ISSN         = {1063-6919},
     month        = {June}
