Change title in Larq Zoo Tutorial

--- a/docs/zoo/tutorials.ipynb
+++ b/docs/zoo/tutorials.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Larq Zoo Examples\n",
+        "# Larq Zoo Tutorial\n",
         "\n",
         "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fmodels%2Fexamples.ipynb\"><button data-md-color-primary=\"larq\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/models/examples.ipynb\"><button data-md-color-primary=\"larq\">View on GitHub</button></a>\n",
         "\n",
