--- a/docs/zoo/tutorials.ipynb
+++ b/docs/zoo/tutorials.ipynb
@@ -5,7 +5,7 @@
       "source": [
         "# Larq Zoo Tutorial\n",
         "\n",
-        "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fmodels%2Fexamples.ipynb\"><button data-md-color-primary=\"larq\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/models/examples.ipynb\"><button data-md-color-primary=\"larq\">View on GitHub</button></a>\n",
+        "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fzoo%2Ftutorials.ipynb\"><button data-md-color-primary=\"larq\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/zoo/tutorials.ipynb\"><button data-md-color-primary=\"larq\">View on GitHub</button></a>\n",
         "\n",
         "This tutorial demonstrates how to load pretrained models from Larq Zoo. These models can be used for prediction, feature extraction, and fine-tuning."
       ],
