Replace arXiv URLs with https version

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -23,7 +23,7 @@
     journal      = {CoRR},
     volume       = {abs/1812.01965},
     year         = {2018},
-    url          = {http://arxiv.org/abs/1812.01965},
+    url          = {https://arxiv.org/abs/1812.01965},
     archivePrefix = {arXiv},
     eprint       = {1812.01965},
     timestamp    = {Tue, 01 Jan 2019 15:01:25 +0100},
@@ -65,7 +65,7 @@
     year         = 2019,
     journal      = {CoRR},
     volume       = {abs/1906.08637},
-    url          = {http://arxiv.org/abs/1906.08637},
+    url          = {https://arxiv.org/abs/1906.08637},
     archiveprefix = {arXiv},
     eprint       = {1906.08637},
     timestamp    = {Mon, 24 Jun 2019 17:28:45 +0200},
@@ -102,7 +102,7 @@
     year         = 2016,
     journal      = {CoRR},
     volume       = {abs/1606.06160},
-    url          = {http://arxiv.org/abs/1606.06160},
+    url          = {https://arxiv.org/abs/1606.06160},
     archiveprefix = {arXiv},
     eprint       = {1606.06160},
     timestamp    = {Mon, 13 Aug 2018 16:48:10 +0200},
